Implements a partial update for the upcoming actor group panel and the inline actor sheets. Expands several of the templates for readability. Fixes an issue with consequence icons.

--- a/src/styles/components/actor-group/actor-group.scss
+++ b/src/styles/components/actor-group/actor-group.scss
@@ -44,6 +44,7 @@
 }
 
 .fatex__actor_group__sheet__navigation a {
+    display: inline-block;
     color: $headline-background;
     padding: $component-padding/2 $component-padding * 2 $component-padding/2 $component-padding * 2;
     position: relative;
