--- a/src/styles/components/desk.scss
+++ b/src/styles/components/desk.scss
@@ -25,6 +25,14 @@
             display: grid;
             grid-template-columns: 4fr 1fr;
         }
+
+        &--group {
+            display: grid;
+            grid-template-columns: repeat(3, 1fr);
+            grid-auto-rows: min-content;
+            gap: $component-padding;
+            padding: $component-padding;
+        }
     }
 
     &__footer {
