--- a/src/styles/components/item.scss
+++ b/src/styles/components/item.scss
@@ -1,7 +1,13 @@
 .fatex-item {
     padding-left: $component-padding;
 
-    &--condition {
+    &--condition,
+    &--consequence {
         padding-left: 36px;
+    }
+
+    &--inline-condition,
+    &--inline-consequence {
+        padding-left: 26px;
     }
 }
