--- a/system/templates/actor/group.hbs
+++ b/system/templates/actor/group.hbs
@@ -1,12 +1,27 @@
-<div class="fatex__actor_group__sheet">
-    <div class="fatex__actor_group__sheet__content">
-        <div class="fatex__actor_group__inlinesheets"></div>
-    </div>
+<div class="fatex-desk">
+    <header class="fatex-header">
+        <div class="fatex-header__name">
+            <label class="fatex-header__label" for="name">
+                {{#if isToken}}Token-{{/if}}{{localize "FAx.Sheet.Name"}}
+            </label>
+
+            <input
+                class="fatex-text-input fatex-text-input--header"
+                name="name"
+                type="text"
+                value="{{actor.name}}"
+            >
+        </div>
+
+        <img class="fatex-header__logo" src="/systems/fatex/assets/logos/powered_by_fate.svg">
+    </header>
+
+    <div class="fatex-eb-actor-group-sheets fatex-desk__content fatex-desk__content--group"></div>
 
     <form autocomplete="off" class="fatex-u-full-height {{cssClass}}">
         <div class="fatex-eb-actor_group-settings fatex__actor_group__settings">
-            <input class="fatex__header__name__input" name="name" type="text" value="{{actor.name}}" />
-            <input class="fatex__header__name__input" name="data.groupType" type="text" value="{{actor.data.groupType}}" />
+            <input name="name" type="text" value="{{actor.name}}" />
+            <input name="data.groupType" type="text" value="{{actor.data.groupType}}" />
 
             {{#if availableTokens}}
                 <div class="fatex__actor_group__availableTokens">
