--- a/system/templates/actor/parts/sidebar/stress.hbs
+++ b/system/templates/actor/parts/sidebar/stress.hbs
@@ -20,7 +20,7 @@
             <div class="fatex-stress-track">
                 {{#each stress.boxes as |box boxIndex|}}
                     <label
-                        class="fatex-eb-stess-checkbox fatex-checkbox"
+                        class="fatex-eb-stress-checkbox fatex-checkbox"
                         data-index="{{boxIndex}}"
                         data-item="{{stress._id}}"
                     >
@@ -37,7 +37,7 @@
                 {{/each}}
 
                 {{#each stress.fillers}}
-                    <div class="fatex-eb-stess-checkbox fatex-checkbox fatex-checkbox--filler"></div>
+                    <div class="fatex-eb-stress-checkbox fatex-checkbox fatex-checkbox--filler"></div>
                 {{/each}}
             </div>
         </div>
