--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -2,9 +2,16 @@
     <div class="fatex__inline_sheet{{#if defeated}} fatex__inline_sheet--defeated{{/if}}{{#if hidden}} fatex__inline_sheet--hidden{{/if}}">
         <h2 class="fatex__inline_sheet__headline fatex-headline">
             <img alt="{{actor.name}}" data-edit="img" src="{{actor.img}}" />
-            <span class="fatex__inline_sheet__headline__name">{{actor.name}}</span>
+            <span class="fatex-headline__text">{{actor.name}}</span>
             {{#unless isToken}}
-                <input class="fatex__inline_sheet__headline__fp" name="data.fatepoints.current" type="number" min="0" max="99" value="{{data.fatepoints.current}}">
+                <input
+                    class="fatex-text-input fatex-text-input--headline"
+                    name="data.fatepoints.current"
+                    type="number"
+                    min="0"
+                    max="99"
+                    value="{{data.fatepoints.current}}"
+                >
             {{/unless}}
         </h2>
 
