--- a/system/templates/inline-sheet/parts/stress.hbs
+++ b/system/templates/inline-sheet/parts/stress.hbs
@@ -9,7 +9,7 @@
 
                 <div class="fatex-actions fatex-actions--headline">
                     <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                    <i class="ffatex-eb-stress-settings fatex-actions__icon fa fa-cog" data-item="{{stress._id}}"></i>
+                    <i class="fatex-eb-stress-settings fatex-actions__icon fa fa-cog" data-item="{{stress._id}}"></i>
                     <i class="fatex-eb-stress-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{stress._id}}"></i>
                 </div>
             </header>
@@ -35,7 +35,7 @@
                             {{#if box.isChecked}}checked="checked"{{/if}}
                         >
 
-                        <span class="fatex-checkbox__icon fa fa-times"></span>
+                        <i class="fatex-checkbox__icon fa fa-times"></i>
                     </label>
                 {{/each}}
 
