--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -22,7 +22,10 @@
 
             <div class="fatex__inline_sheet__back">
                 {{> "systems/fatex/templates/inline-sheet/parts/consequences.hbs"}}
-                {{> "systems/fatex/templates/inline-sheet/parts/stress.hbs"}}
+
+                <section class="fatex-item-grid fatex-u-padding-std">
+                    {{> "systems/fatex/templates/components/stress.hbs"}}
+                </section>
             </div>
         </div>
     </div>
