--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -21,7 +21,9 @@
             </div>
 
             <div class="fatex__inline_sheet__back">
-                {{> "systems/fatex/templates/inline-sheet/parts/consequences.hbs"}}
+                <section class="fatex-desk__consequences">
+                    {{> "systems/fatex/templates/components/consequences.hbs"}}
+                </section>
 
                 <section class="fatex-item-grid fatex-u-padding-std">
                     {{> "systems/fatex/templates/components/stress.hbs"}}
