--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -17,7 +17,9 @@
 
         <div class="fatex__inline_sheet__content">
             <div class="fatex__inline_sheet__front">
-                {{> "systems/fatex/templates/inline-sheet/parts/aspects.hbs"}}
+                <section class="fatex-desk__aspects">
+                    {{> "systems/fatex/templates/components/aspects.hbs"}}
+                </section>
             </div>
 
             <div class="fatex__inline_sheet__back">
