--- a/system/templates/actor/character.hbs
+++ b/system/templates/actor/character.hbs
@@ -12,7 +12,14 @@
 
                 {{!--Aspects--}}
                 <section class="fatex-desk__aspects">
-                    {{> "systems/fatex/templates/actor/parts/tabloid/aspects.hbs"}}
+                    <header class="fatex-headline">
+                        <h2 class="fatex-headline__text">{{localize "FAx.Sheet.Aspects"}}</h2>
+                        <div class="fatex-actions fatex-actions--headline">
+                            <i class="fatex-eb-aspect-add fatex-actions__icon fa fa-plus"></i>
+                        </div>
+                    </header>
+
+                    {{> "systems/fatex/templates/components/aspects.hbs"}}
                 </section>
 
                 {{!--Consequences--}}
