--- a/system/templates/components/consequences.hbs
+++ b/system/templates/components/consequences.hbs
@@ -4,12 +4,18 @@
         data-item-id="{{consequence._id}}"
     >
         <div class="fatex-u-pos-relative">
-            <div class="fatex-eb-consequence-input fatex-text-input" contenteditable="true" data-item-id="{{consequence._id}}">{{{consequence.data.value}}}</div>
+            <div
+                class="fatex-eb-consequence-input fatex-text-input"
+                contenteditable="true"
+                data-item-id="{{consequence._id}}"
+            >
+                {{{consequence.data.value}}}
+            </div>
 
             <div class="fatex-actions fatex-actions--item">
-                    <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
-                    <i class="fatex-eb-consequence-settings fatex-actions__icon fa fa-cog" data-item="{{consequence._id}}"></i>
-                    <i class="fatex-eb-consequence-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{consequence._id}}"></i>
+                <i class="fatex-eb-item-sort fatex-actions__icon fa fa-sort"></i>
+                <i class="fatex-eb-consequence-settings fatex-actions__icon fa fa-cog" data-item="{{consequence._id}}"></i>
+                <i class="fatex-eb-consequence-delete fatex-actions__icon fatex-u-delete fa fa-trash" data-item="{{consequence._id}}"></i>
             </div>
 
             <label class="fatex-text-input__label">{{consequence.data.label}}</label>
