--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -4,24 +4,12 @@
     color: $headline-color;
     background: $headline-background;
 
-    &::before,
-    &::after {
-        content: "";
-        position: absolute;
-    }
-
     &::before {
-        top: -1px;
-        left: -1px;
-        border-top: 16px solid #f1f2f6;
-        border-right: 16px solid transparent;
+        @include cutout-top-left;
     }
 
     &::after {
-        bottom: -1px;
-        right: -1px;
-        border-bottom: 16px solid #f1f2f6;
-        border-left: 16px solid transparent;
+        @include cutout-bottom-right;
     }
 
     &--center {
@@ -46,17 +34,12 @@
         border-bottom: none;
 
         &::before {
-            content: unset;
+            @include reset-cutouts;
         }
 
         &::after {
-            content: "";
-            position: absolute;
-            top: -1px;
-            right: -1px;
-            border: none;
-            border-top: 16px solid #f1f2f6;
-            border-left: 16px solid transparent;
+            @include reset-cutouts;
+            @include cutout-top-right;
         }
     }
 
