--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -9,24 +9,12 @@
     font-size: 13px;
     box-shadow: 1px 1px 1px $shadow-color;
 
-    &::before,
-    &::after {
-        content: "";
-        position: absolute;
-    }
-
     &::before {
-        top: -1px;
-        left: -1px;
-        border-top: 16px solid #f1f2f6;
-        border-right: 16px solid transparent;
+        @include cutout-top-left;
     }
 
     &::after {
-        bottom: -1px;
-        right: -1px;
-        border-bottom: 16px solid #f1f2f6;
-        border-left: 16px solid transparent;
+        @include cutout-bottom-right;
     }
 }
 
