Adds the new inline tab buttons to the inline sheet template. Adds new styles for these buttons. The buttons are currently non-functional.

--- a/system/templates/actor/group.hbs
+++ b/system/templates/actor/group.hbs
@@ -36,7 +36,9 @@
         </div>
     </form>
 
-    <div class="fatex__actor_group__sheet__navigation">
+    {{!-- This section has been temporarily removed while an appropriate UI is decided upon --}}
+
+    {{!-- <div class="fatex__actor_group__sheet__navigation">
         <a class="fatex__actor_group__sheet__navigation--front active" data-show="front"><i class="fas fa-theater-masks"></i></a>
         <a class="fatex__actor_group__sheet__navigation--back" data-show="back"><i class="fas fa-user-injured"></i></a>
 
@@ -45,5 +47,5 @@
         {{/if}}
 
         <a class="fatex__actor_group__sheet__navigation--settings"><i class="fas fa-cog"></i></a>
-    </div>
+    </div> --}}
 </div>
