--- a/system/templates/inline-sheet/character.hbs
+++ b/system/templates/inline-sheet/character.hbs
@@ -15,6 +15,18 @@
             {{/unless}}
         </h2>
 
+        <nav class="fatex-inline-tabs">
+            <a class="fatex-inline-tabs__item fatex-inline-tabs__item--active" data-tab="aspects">
+                {{~localize "FAx.Sheet.Aspects"~}}
+            </a>
+            <a class="fatex-inline-tabs__item" data-tab="consequences">
+                {{~localize "FAx.Sheet.Consequences"~}}
+            </a>
+            <a class="fatex-inline-tabs__item" data-tab="stress">
+                {{~localize "FAx.Sheet.StressTracks"~}}
+            </a>
+        </nav>
+
         <div class="fatex__inline_sheet__content">
             <div class="fatex__inline_sheet__front">
                 <section class="fatex-desk__aspects">
