--- a/src/styles/components/desk.scss
+++ b/src/styles/components/desk.scss
@@ -10,6 +10,10 @@
         flex-direction: column;
         gap: 10px;
         padding: 10px;
+
+        &--inline {
+            padding-left: 0;
+        }
     }
 
     &__content {
