Adds padding to the right of an the inline sheet headline to ensure the fate points input doesn't overlap the actor name.

--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -32,6 +32,7 @@
 
     &--inline-sheet {
         border-bottom: none;
+        padding-right: 50px;
 
         &::before {
             @include reset-cutouts;
