Simplifies the SCSS variable use and removes several unused variables.

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -1,21 +1,13 @@
-// Components
+// Spacing
 $component-padding: 10px;
-$component-border-size: 0px;
-$component-border-color: rgb(31, 31, 31);
-$component-border-style: solid;
 
 // Colors
-$sheet-background: rgb(241, 242, 246);
-
 $primary-color: rgba(47, 53, 66, 1);
 $primary-color-transparent: transparentize($primary-color, 0.7);
 
-$header-background: $primary-color;
-$header-font-color: rgb(255, 255, 255);
-$header-shadow-color: rgba(47, 53, 66, 1);
+$sheet-background: rgb(241, 242, 246);
 
-$headline-background: $primary-color;
-$headline-color: rgb(255, 255, 255);
+$light-text-color: #fff;
 
 $caution-color: rgb(242, 22, 40);
 $shadow-color: rgb(160, 160, 160);
