--- a/src/styles/components/tabs/tab-navigation.scss
+++ b/src/styles/components/tabs/tab-navigation.scss
@@ -14,7 +14,7 @@
 
         &.active,
         &:hover {
-            background: $headline-background;
+            background: $primary-color;
             color: $headline-color;
         }
 
