--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -1,5 +1,5 @@
 .fatex__headline {
-    background: $headline-background;
+    background: $primary-color;
     color: $headline-color;
     padding: $component-padding/2 $component-padding * 2 $component-padding/2 $component-padding * 2;
     position: relative;
