Updates several remaining uses of the headline-color variable to use the new light-text-color variable instead.

--- a/src/styles/components/apps/setup.scss
+++ b/src/styles/components/apps/setup.scss
@@ -75,7 +75,7 @@
         border: 1px solid $primary-color;
         border-radius: 3px;
         margin-right: $component-padding;
-        color: $headline-color;
+        color: $light-text-color;
         font-size: 11px;
         text-align: center;
     }
