--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -1,7 +1,7 @@
 .fatex-headline {
     position: relative;
     margin-bottom: 0.5rem;
-    color: $headline-color;
+    color: $light-text-color;
     background: $primary-color;
 
     &::before {
