--- a/src/styles/components/tabs/tab-navigation.scss
+++ b/src/styles/components/tabs/tab-navigation.scss
@@ -15,7 +15,7 @@
         &.active,
         &:hover {
             background: $primary-color;
-            color: $headline-color;
+            color: $light-text-color;
         }
 
         &::after {
