--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -1,6 +1,6 @@
 .fatex__headline {
     background: $primary-color;
-    color: $headline-color;
+    color: $light-text-color;
     padding: $component-padding/2 $component-padding * 2 $component-padding/2 $component-padding * 2;
     position: relative;
     font-weight: bold;
