Make further changes to the SCSS variables. Adds CSS custom properties as part of the style delcarations anywhere that the primary colour of message-background variables are used. The properties are unset, leading to the fallback property being used. These fallbacks represent the default styles for the system. Adding values for the CSS custom properties using JS will, however, allow a user to enact system wide changes to the system styles.

--- a/src/styles/abstract/variables.scss
+++ b/src/styles/abstract/variables.scss
@@ -3,10 +3,11 @@ $component-padding: 10px;
 
 // Colors
 $primary-color: rgba(47, 53, 66, 1);
-$primary-color-transparent: transparentize($primary-color, 0.7);
 
 $sheet-background: rgb(241, 242, 246);
+$message-background: transparentize($primary-color, 0.7);
 
+$primary-text-color: #191813;
 $light-text-color: #fff;
 
 $caution-color: rgb(242, 22, 40);
