--- a/src/styles/components/apps/setup.scss
+++ b/src/styles/components/apps/setup.scss
@@ -72,7 +72,7 @@
         display: inline-block;
         width: 16px;
         height: 16px;
-        border: 1px solid $primary-color;
+        border: 1px solid var(--primary-color, $primary-color);
         border-radius: 3px;
         margin-right: $component-padding;
         color: $light-text-color;
@@ -81,7 +81,7 @@
     }
 
     &:checked + &__box {
-        background: $primary-color;
+        background: var(--primary-color, $primary-color);
 
         &:before {
             content: "\f00c";
