--- a/src/styles/components/headline.scss
+++ b/src/styles/components/headline.scss
@@ -2,7 +2,7 @@
     position: relative;
     margin-bottom: 0.5rem;
     color: $light-text-color;
-    background: $primary-color;
+    background: var(--primary-color, $primary-color);
 
     &::before {
         @include cutout-top-left;
@@ -52,7 +52,7 @@
         transform: translate(-25px, 0px);
         font-weight: 900;
         color: $sheet-background;
-        -webkit-text-stroke: 2px $primary-color;
+        -webkit-text-stroke: 2px var(--primary-color, $primary-color);
         text-shadow: initial;
 
         &--skill {
@@ -90,6 +90,7 @@
 .fatex-section-heading {
     display: block;
     position: relative;
+    color: $primary-text-color;
 
     &--no-border {
         border: none;
