--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -1,5 +1,5 @@
 .fatex__headline {
-    background: $primary-color;
+    background: var(--primary-color, $primary-color);
     color: $light-text-color;
     padding: $component-padding/2 $component-padding * 2 $component-padding/2 $component-padding * 2;
     position: relative;
@@ -34,7 +34,7 @@
     font-weight: 900;
     font-size: 24px;
     color: $sheet-background;
-    -webkit-text-stroke: 2px $primary-color;
+    -webkit-text-stroke: 2px var(--primary-color, $primary-color);
     text-shadow: initial;
 }
 
@@ -53,7 +53,7 @@
 .fatex__chat__die {
     font-family: "Fate Icons", sans-serif;
     font-size: 24px;
-    color: $primary-color;
+    color: var(--primary-color, $primary-color);
 }
 
 .fatex__chat__total {
@@ -63,7 +63,7 @@
 }
 
 .fatex__chat__ladder {
-    color: $primary-color;
+    color: var(--primary-color, $primary-color);
     font-weight: 300;
     font-size: 12px;
     display: block;
