Set ups the styles using the light-text-color variable to use custom properties with a fallback.

--- a/src/styles/components/apps/setup.scss
+++ b/src/styles/components/apps/setup.scss
@@ -75,7 +75,7 @@
         border: 1px solid var(--primary-color, $primary-color);
         border-radius: 3px;
         margin-right: $component-padding;
-        color: $light-text-color;
+        color: var(--light-text-color, $light-text-color);
         font-size: 11px;
         text-align: center;
     }
