--- a/src/styles/components/sheet/configuration.scss
+++ b/src/styles/components/sheet/configuration.scss
@@ -7,7 +7,7 @@
     box-shadow: 0 -2px 15px 0 #2f3542;
     background: #2f3542;
     z-index: 5;
-    color: $light-text-color;
+    color: var(--light-text-color, $light-text-color);
 
     .fatex-eb-edit-mode & {
         display: block;
