--- a/src/styles/components/tabs/tab-navigation.scss
+++ b/src/styles/components/tabs/tab-navigation.scss
@@ -15,7 +15,7 @@
         &.active,
         &:hover {
             background: var(--primary-color, $primary-color);
-            color: $light-text-color;
+            color: var(--light-text-color, $light-text-color);
         }
 
         &::after {
