--- a/src/styles/legacy/chat.scss
+++ b/src/styles/legacy/chat.scss
@@ -1,6 +1,6 @@
 .fatex__headline {
     background: var(--primary-color, $primary-color);
-    color: $light-text-color;
+    color: var(--light-text-color, $light-text-color);
     padding: $component-padding/2 $component-padding * 2 $component-padding/2 $component-padding * 2;
     position: relative;
     font-weight: bold;
